# energy-grpc-timeseries

./: .dockerignore  .gitignore  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS.md  Makefile  README.md  compose.yml  pyproject.toml
.github/: copilot-instructions.md
docker/: Dockerfile  Dockerfile.python  Dockerfile.redis  redis.conf
energy-grip-client/: Makefile  README.md  pyproject.toml
energy-grip-client/client/: energy_client.py
energy-grip-client/examples/: demo.py
energy-grip-client/protos/: energy.proto
energy-grpc-client/: .gitignore  Makefile  README.md  pyproject.toml
energy-grpc-client/examples/: demo.py
energy-grpc-client/protos/: energy.proto
protos/: energy.proto
scripts/: gen_protos.sh  local_client.py
src/energy_server/: config.py  redis_store.py  server.py
tests/: conftest.py  support.py  test_grpc_client_integration.py  test_redis_store.py  test_server_integration.py
