[project]
name = "energy-grip-client"
version = "0.1.0"
description = "gRPC client for the energy-grpc-timeseries server"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.80",
    "protobuf>=6.31.1",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.80",
]

[tool.uv]
constraint-dependencies = [
    "grpcio>=1.80",
    "grpcio-tools>=1.80",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
